<resources>
    <string name="app_name">LayoutOne</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="welcome">WELCOME TO LOGIN PAGE</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="email">example123@gmail.com</string>
    <string name="phoneno">MobileNo</string>
    <string name="next">Next</string>
    <string name="Sreenivas">Sreenivas Chinthakayala</string>
    <string name="rgstr">Your Account is Registered</string>

</resources>